board rendered onto the FE

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chess.com</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>waddaup</h1>
+    <div class="w-full h-screen flex items-center justify-center bg-zinc-900" >
+        <div class="chessboard w-96 h-96 bg-red-400" ></div>
+    </div>
 
 
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
